--- a/gorisenVulnApp/website/templates/base.html
+++ b/gorisenVulnApp/website/templates/base.html
@@ -78,6 +78,14 @@
     <div class ="container">
         {% block content %}
         {% endblock %}
+
+      <br>
+      <br>
+      <br>
+
+        <div style="text-align: center;">
+          <img src="/static/gori.jpg" width="300" height="400" class="center" >
+        </div>
     </div>
 
 
@@ -113,6 +121,8 @@
   }
 </script>
 {% endblock %}
+
+
 
   </body>
 </html>
