adjusted some html and css, added a footer

--- a/gorisenVulnApp/website/templates/base.html
+++ b/gorisenVulnApp/website/templates/base.html
@@ -14,6 +14,7 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>{% block title %}Home{% endblock %}</title>
   </head>
@@ -83,9 +84,7 @@
       <br>
       <br>
 
-        <div style="text-align: center;">
-          <img src="/static/gori.jpg" width="300" height="400" class="center" >
-        </div>
+
     </div>
 
 
@@ -125,4 +124,84 @@
 
 
   </body>
+
+<!-- Section: Links  -->
+  <section class=".bg-body-tertiary" style="background-color: #9FA6B2;">
+
+    <div class="container text-center text-md-start mt-5">
+      <br>
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3"></i>GorigoriSensei
+          </h6>
+          <p>
+            Hi! I'm OSCP and BSCP (Burp Suite Certified Practitioner) certified, Offensive Security Researcher.
+          </p>
+
+            <p> I created this web application for someone who wants to learn Web App Pentesting and/or Secure Coding.
+             I hope you enjoy!
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            links
+          </h6>
+          <p>
+
+            <a href="https://github.com/gorigorisensei" class="text-reset">github</a>
+            <i class="fa fa-github-alt" style="font-size:25px;color:#00695C"></i>
+          </p>
+          <p>
+            <a href="http://gorigorisensei.com" class="text-reset">Portfolio Website</a>
+            <i class="	fa fa-user-circle-o" style="font-size:25px;color:#1565C0
+
+"></i>
+          </p>
+          <p>
+            <a href="https://www.linkedin.com/in/toru-hirosawa-26b575b7/" class="text-reset">Linkedin</a>
+            <i class="fa fa-linkedin-square" style="font-size:25px;color:#0077B5"></i>
+
+          </p>
+          <p>
+            <a href="https://www.youtube.com/channel/UC0pMCeGEFMUnExdl-3uftTg" class="text-reset">Youtube</a>
+            <i class="fa fa-youtube" style="font-size:25px;color:#B71C1C"></i>
+          </p>
+        </div>
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <div style="text-align: center;">
+          <img src="/static/gori.jpg" width="150" height="200" style="border-radius: 100%;" >
+        </div>
+
+        </div>
+
+
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2023 Copyright:
+    <a class="text-reset fw-bold" href="https://gorigorisensei.com">Gorigorisensei</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
 </html>
