--- a/gorisenVulnApp/website/templates/find_secret.html
+++ b/gorisenVulnApp/website/templates/find_secret.html
@@ -2,16 +2,21 @@
 %}
 
 <br>
-<h1 align="center">LFI Challenge</h1>
+<br>
+<br>
+<br>
+<h1 align="center">Cat Image Finder</h1>
 
 <br>
 <br>
 
 <div align="center">
-    <a class="btn btn-primary" href="?file=cat.jpg">show a cat picture!
+    <a class="btn btn-primary" href="?file=cat.jpg">show me a cat picture!
     </a>
     <br>
     <br>
+    <br>
+    <h2>Challenge:</h2>
     <br>
     <h3>Can you find a secrets.txt inside the web root?  </h3>
 
