--- a/gorisenVulnApp/website/templates/login.html
+++ b/gorisenVulnApp/website/templates/login.html
@@ -21,12 +21,36 @@
   <br>
   <button type=submit" class="btn btn-primary">Login</button>
 
-      <div>
-          <br>
-      <h3>
-      <a href="/find_secret">LFI Challenge </a>
-      </h3>
-      </div>
+      <br>
+      <br>
+      <br>
+      <br>
+
+      <div class="card">
+  <div class="card-header">
+    Featured
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Cat Image Finder</h5>
+    <p class="card-text">This feature may introduce a critical vulnerability...oh well.</p>
+     <a class="btn btn-success" href="/find_secret" role="button">Cat Image Finder</a>
+  </div>
+</div>
+
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+
+
+
+
+
+
+
+
 
 
 
