--- a/gorisenVulnApp/website/templates/base.html
+++ b/gorisenVulnApp/website/templates/base.html
@@ -121,10 +121,6 @@
 </script>
 {% endblock %}
 
-
-
-  </body>
-
 <!-- Section: Links  -->
   <section class=".bg-body-tertiary" style="background-color: #9FA6B2;">
 
@@ -140,10 +136,10 @@
             <i class="fas fa-gem me-3"></i>GorigoriSensei
           </h6>
           <p>
-            Hi! I'm OSCP and BSCP (Burp Suite Certified Practitioner) certified, Offensive Security Researcher.
+            Hi! I'm OSCP and BSCP (Burp Suite Certified Practitioner) certified, Security Researcher.
           </p>
 
-            <p> I created this web application for someone who wants to learn Web App Pentesting and/or Secure Coding.
+            <p> I created this web application for anyone who wants to learn Web App Pentesting and/or Secure Coding.
              I hope you enjoy!
           </p>
         </div>
@@ -194,8 +190,12 @@
       <!-- Grid row -->
     </div>
   </section>
-  <!-- Section: Links  -->
 
+  </body>
+
+
+  <!-- Section: Links  -->
+<footer style="margin: 0 0 -50px 0;">
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2023 Copyright:
