--- a/gorisenVulnApp/website/templates/login.html
+++ b/gorisenVulnApp/website/templates/login.html
@@ -42,6 +42,18 @@
 
       <br>
       <br>
+
+
+      <div class="card">
+  <div class="card-header">
+    127.0.0.1
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Ping!</h5>
+    <p class="card-text">You can ping someone with this.</p>
+     <a class="btn btn-success" href="/ping" role="button">ping ping ping!</a>
+  </div>
+</div>
       <br>
       <br>
       <br>
