--- a/gorisenVulnApp/website/templates/find_secret.html
+++ b/gorisenVulnApp/website/templates/find_secret.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}LFI challenge{% endblock %} {% block content
+{% extends "base.html" %} {% block title %}Cat Image Finder{% endblock %} {% block content
 %}
 
 <br>
