--- a/gorisenVulnApp/website/templates/login.html
+++ b/gorisenVulnApp/website/templates/login.html
@@ -59,6 +59,17 @@
       <br>
 
 
+      <div class="card">
+  <div class="card-header">
+    Let's head to an adventure!
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Pick Your Buddy's name! </h5>
+     <a class="btn btn-info" href="/pickPartner" role="button">Are you ready?</a>
+  </div>
+</div>
+
+
 
 
 
