--- a/gorisenVulnApp/website/templates/ping.html
+++ b/gorisenVulnApp/website/templates/ping.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}LFI challenge{% endblock %} {% block content
+{% extends "base.html" %} {% block title %}Ping{% endblock %} {% block content
 %}
 
 <br>
