--- a/gorisenVulnApp/website/templates/base.html
+++ b/gorisenVulnApp/website/templates/base.html
@@ -36,6 +36,7 @@
 
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+          <a class="nav-item nav-link" id="fortune" href="/fortune">Fortune</a>
           {% else%}
 
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
