added an XXE example

--- a/gorisenVulnApp/website/templates/login.html
+++ b/gorisenVulnApp/website/templates/login.html
@@ -69,9 +69,20 @@
   </div>
 </div>
 
+      <br>
+      <br>
+      <br>
 
 
-
+<div class="card">
+  <div class="card-header">
+    XML checker!
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">You can check if your XML is valid here:</h5>
+     <p>Send a POST request containing an XML file to /is_xml endpoint with the key: xml.</p>
+  </div>
+</div>
 
 
 
